styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");

html,
body {
    min-height: 100vh;
    padding: 0;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Quicksand, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
        sans-serif;
    background-color: #121212;

    overflow-x: hidden;
    overflow-y: overlay;
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
    /* html {
        color-scheme: dark;
    } */
    body {
        color: white;
        /* background: black; */
    }
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 3px;
}

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.AppContainer {
    position: absolute;
    top: 100px;

    width: 100vw;
    min-height: calc(100vh - 100px);

    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.App {
    /* position: absolute;
    top: 100px;
    left: 0;
    right: 0;
    margin-inline: auto; */

    width: 1000px;
    min-height: calc(100vh - 130px);

    margin-bottom: 20px;
}

